--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,14 @@ body {
     text-shadow:0 1px 2px rgba(255,255,255,1);
     text-align:center;
     background:#05abe0;
-    background: linear-gradient(top, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
-        background: -moz-linear-gradient(top, #87e0fd 0%, #53cbf1 40%, #05abe0 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87e0fd), color-stop(40%,#53cbf1), color-stop(100%,#05abe0));
-        background: -webkit-linear-gradient(top, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
-        background: -o-linear-gradient(top, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
-        background: -ms-linear-gradient(top, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#87e0fd',endColorstr='#05abe0',GradientType=0);
+    background: rgb(147,206,222);
+    background: -moz-linear-gradient(top,  rgb(147,206,222) 0%, rgb(117,189,209) 41%, rgb(73,165,191) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(147,206,222)), color-stop(41%,rgb(117,189,209)), color-stop(100%,rgb(73,165,191)));
+    background: -webkit-linear-gradient(top,  rgb(147,206,222) 0%,rgb(117,189,209) 41%,rgb(73,165,191) 100%);
+    background: -o-linear-gradient(top,  rgb(147,206,222) 0%,rgb(117,189,209) 41%,rgb(73,165,191) 100%);
+    background: -ms-linear-gradient(top,  rgb(147,206,222) 0%,rgb(117,189,209) 41%,rgb(73,165,191) 100%);
+    background: linear-gradient(top,  rgb(147,206,222) 0%,rgb(117,189,209) 41%,rgb(73,165,191) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=0 );
 }
 
 a {
