Fixing some code... Signed-off-by: molokoloco <molokoloco@gmail.com>

--- a/css/animates.css
+++ b/css/animates.css
@@ -1,14 +1,4 @@
-/*
-Animate.css - http://daneden.me/animate
-LICENSED UNDER THE  MIT LICENSE (MIT)
-Copyright (c) 2011 Dan Eden
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
-
-
-/* --------------------- Inlined doc by mlklc ------------------------------------- */
+/* --------------------- Inlined doc ------------------------------------- */
 
 /* 
     * Usage : 
@@ -54,6 +44,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     -o-animation-fill-mode:both;
     animation-fill-mode:both;
 }
+
 .medium {
     -webkit-animation-duration: 1200ms;
     -moz-animation-duration: 1200ms;
@@ -79,6 +70,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     -o-animation-fill-mode:both;
     animation-fill-mode:both;
 }
+
 .fast {
     -webkit-animation-duration: 600ms;
     -moz-animation-duration: 600ms;
@@ -92,8 +84,6 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     -o-animation-timing-function: ease-out;
     animation-timing-function: ease-out;
 
-
-
     -webkit-animation-direction: normal;
     -moz-animation-direction: normal;
     -ms-animation-direction: normal;
@@ -106,6 +96,16 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     -o-animation-fill-mode:both;
     animation-fill-mode:both;
 }
+
+/* --------------------- Animates ------------------------------------- */
+/*
+    Animate.css - http://daneden.me/animate
+    LICENSED UNDER THE  MIT LICENSE (MIT)
+    Copyright (c) 2011 Dan Eden
+    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+*/
 
 @-webkit-keyframes flash {
 	0%, 50%, 100% {opacity: 1;}
@@ -860,6 +860,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     }
 	100% {
         transform: perspective(400px) rotateY(90deg);
+
         opacity: 0;
     }
 }
@@ -1931,6 +1932,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .fadeOutLeftBig {
+
 	-webkit-animation-name: fadeOutLeftBig;
 	-moz-animation-name: fadeOutLeftBig;
 	-ms-animation-name: fadeOutLeftBig;
